--- a/src/BookAMeal.css
+++ b/src/BookAMeal.css
@@ -10,9 +10,18 @@ body {
 
 .wrapper {
     /* width: 100%; */
-    min-height: 100%;
+    min-height: 800px;
     position: relative;
     padding:40px;
+    background-repeat: no-repeat;
+    background-image: url(images/background.jpg);
+    background-size: cover;
+    background-position: center center;
+    width: 100%;
+    height: 100%;
+    opacity: 1;
+    visibility: inherit;
+    z-index: 20;
 }
 
 #nav ul{
@@ -166,11 +175,7 @@ input[type=text]:focus, input[type=password]:focus {
     width: 100%;
     padding: 15px 0px;
     border-radius: 10px;
-    height: 450px;
-}
-
-.mainContent > div {
-    margin: 5px 10px;
+    display: inline-block;
 }
 
 .mainContent > div > .header {
