--- a/src/BookAMeal.css
+++ b/src/BookAMeal.css
@@ -253,6 +253,10 @@ input[type=text]:focus, input[type=password]:focus {
     background: #f9f9f9;
   }
 
+  #manageMenu{
+      margin-bottom: 30px;
+  }
+
 /* Change styles for cancel button and signup button on extra small screens */
 @media screen and (max-width: 300px) {
     .cancelbtn, .signupbtn, .signinbtn {
