--- a/src/BookAMeal.scss
+++ b/src/BookAMeal.scss
@@ -1,6 +1,8 @@
+$themeBlueColor: #003040;
+
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background: linear-gradient(155deg, #3bc1ed, #165f78, #003040);
+    background: linear-gradient(155deg, #3bc1ed, #165f78, $themeBlueColor);
     width: 100%;
     min-height: 100%;
     overflow-x: hidden;
@@ -178,7 +180,7 @@ input[type=text]:focus, input[type=password]:focus {
 }
 
 .mainContent > div > .header {
-    background-color:  #003040;
+    background-color:  $themeBlueColor;
     padding: 30px 40px;
     display: inline-block;
     width: 100%;
@@ -245,7 +247,7 @@ input[type=text]:focus, input[type=password]:focus {
   }
   
   .mainContent > div > ul li .close:hover {
-    background-color: #003040;
+    background-color: $themeBlueColor;
     color: white;
   }
 
